<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My WatchList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

          <string name="drawer_open">Slider Menu Opened</string>
               <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>MyWatchList</item>
        <item>Photos</item>
        <item>Log Out</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    //Home Screen            <string name="Home_head">Home</string>
    //Tabs                   <string name="hm_overview_tab">Overview</string>
                             <string name="hm_discover_tab">Discover</string>
                             <string name="hm_agenda_tab">Agenda</string>
    //Overview tab            <string name="hm_overview">Overview</string>
    //Discover tab            <string name="hm_discover">Discover</string>


    <string name="hm_discover_recommended">Recommended</string>
    <string name="hm_discover_popular">Popular</string>
    <string name="hm_discover_editor">Editors Choice</string>

    <string-array name="Hm_Titles">
        <item>Arrow</item>
        <item>Black-ish</item>
        <item>Constatine</item>
        <item>Game of Thrones</item>
        <item>Gotham</item>
        <item>Gracepoint</item>
        <item>Lost</item>
        <item>Supernatural</item>
        <item>The Flash</item>
    </string-array>
    <string-array name="Hm_Description">
        <item>Description1</item>
        <item>Description2</item>
        <item>Description3</item>
        <item>Description4</item>
        <item>Description5</item>
        <item>Description6</item>
        <item>Description7</item>
        <item>Description8</item>
        <item>Description9</item>
    </string-array>

    <string name="hm_agenda_today">Today</string>
    <string name="hm_agenda_week">This Week</string>
    <string name="hm_agenda_season">This Season</string>
    <string name="LogIn">Log In</string>
    <string name="Remember">Remember me</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="addto">Add to</string>
    <string name="Arrow">Arrow</string>
    <string name="rate">Rate</string>
    <string name="title_activity_info_page">InfoPage</string>
    <string name="addepisode">Episode</string>
    <string name="genre">Genres:</string>
    <string name="genres">Action, Adventure, Crime</string>
    <string name="statusw">Status :</string>
    <string name="status">Airing </string>
    <string name="beschrijving">Spoiled billionaire playboy Oliver Queen is missing
        and presumed dead when his yacht is lost at sea. He returns five years later a changed man,
        determined to clean up the city as a hooded vigilante armed with a bow.</string>

    // strings for Watchlist. DO NOT CHANGE!            <string name="wl_title">Watchlist</string>

    <string name="wl_tab1">Watching</string>
    <string name="wl_tab2">Completed</string>
    <string name="wl_tab3">On hold</string>
    <string name="wl_example_text"> Random text message </string>

    <string-array name="wl_a_title">
        <item>Game of Thrones</item>
        <item>The Big Bang Theory</item>
        <item>True Blood</item>
        <item>NCIS</item>
        <item>Criminal Minds</item>
        <item>Pretty Little Liars</item>
        <item>Falling Skies</item>
        <item>Family Guy</item>
        <item>Hannibal</item>
        <item>Bones</item>
        <item>Arrow</item>
    </string-array>
    <string-array name="wl_a_message">
        <item>Episode 7 "Mockingbird" airs today</item>
        <item>Next Episode is not available</item>
        <item>Episode 1 "Jesus Gonna Be Here" airs in 1 months and 5 days</item>
        <item>Next Episode is not available</item>
        <item>Next Episode is not available</item>
        <item>Episode 1 "EscApe From New York" airs in 23 days</item>
        <item>Episode 1 "Ghost in the Machine" airs in 1 months and 5 days</item>
        <item>Episode 21 "Chap Stewie" airs in 9 hours</item>
        <item>Episode 13 "Mizumono" airs in 5 days</item>
        <item>Episode 24 "The Recluse in the Recliner" airs in tomorrow</item>
        <item>Next Episode is not available</item>
    </string-array>
    <string-array name="wl_b_title">
        <item>Game of Thrones</item>
        <item>The Big Bang Theory</item>
        <item>NCIS</item>
    </string-array>
    <string-array name="wl_b_message">
        <item>Episode 7 "Mockingbird" airs today</item>
        <item>Next Episode is not available</item>
        <item>Next Episode is not available</item>
    </string-array>
    <string-array name="wl_c_title">
        <item>Family Guy</item>
        <item>Hannibal</item>
        <item>Bones</item>
    </string-array>
    <string-array name="wl_c_message">
        <item>Episode 21 "Chap Stewie" airs in 9 hours</item>
        <item>Episode 13 "Mizumono" airs in 5 days</item>
        <item>Episode 24 "The Recluse in the Recliner" airs in tomorrow</item>
    </string-array>

    <string name="title_activity_main_main">MyWatchList</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_login1">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in…</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="title_activity_signup_or_login">SignupOrLogin</string>
    <string name="title_activity_sign_up_or_log_in">SignUpOrLogInActivity</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">Managing series made easy </string>
    <string name="title_activity_settings">Settings</string>
    <string name="feet_250">250 feet</string>
    <string name="feet_1000">1000 feet</string>
    <string name="feet_4000">4000 feet</string>
    <string name="search_distance">Search Distance</string>
    <string name="log_out">Log out of Anywall</string>
    <string name="post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="title_activity_sign_up_or_login_in">SignUpOrLoginInActivity</string>

</resources>
